config/samples/ingress-annotation.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # Ingress used to test ingresses with ingressClassName set via an annotation
  name: reply-urls-example-2
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: reply-urls-example-2.local.platform.hmcts.net
    http:
      paths:
      - backend:
          service:
            name: reply-urls-operator
            port:
              number: 80
        path: /
        pathType: Prefix
