config/samples/ingress-spec.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # Ingress used to test ingresses with ingressClassName in its spec
  name: reply-urls-example-1
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: reply-urls-example-1.local.platform.hmcts.net
    http:
      paths:
      - backend:
          service:
            name: reply-urls-operator
            port:
              number: 80
        path: /
        pathType: Prefix
